src/App.css
* {
  box-sizing: border-box;
}

.App {
  text-align: center;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

.header {
  display: flex;
  max-height: 25px;
  align-items: center;
  padding-top: 24px;
  padding-left: 24px;
  padding-right: 24px;
  flex-direction: row;
  padding-bottom: 24px;
  justify-content: space-between;
  background-color: white;
  box-shadow: 0px -2px 10px rgb(0 0 0 / 15%);
}

.header>h3 {
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 400;
}

.header>h3:visited {
  color: black;
  text-decoration: none;
}



.header::after {
  bottom: 0;
  box-shadow: 0 0.0625em 0.5em rgba(0, 0, 0, 0.3);
  content: '';
  left: 0;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
  transition: opacity 0.3s;
  z-index: -1;
}

.header.is-active::after {
  opacity: 1;
}


.search {
  display: flex;
  align-items: center;
  justify-content: center;

}

.search>input {
  width: 100%;
  background: #ffffff;
  color: black;
  border: none;
  outline: none;
  box-shadow: none;
  font-size: 1em;
  letter-spacing: 0.1em;
  padding: 10px 0 5px;
  border-bottom: 1px solid black;
}

main {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 40px;
  justify-content: space-around;
}

.mid--section {
  display: flex;
  width: 136px;
  align-items: center;
  justify-content: space-around;
}

.microphone--button {
  border-radius: 100%;
  /*box-shadow: 0px -2px 10px rgb(0 0 0 / 15%);*/
  box-shadow: 0 2px 5px rgb(0 0 0 / 15%);
  width: max-content;
  background-color: #fff;
  position: relative;
  margin: 70px;
  margin-top: 50px;
  margin-bottom: 70px;


}

.microphone--image {
  width: 52px;
  padding: 40px;
}



.right--section {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  align-content: space-between;
  padding-top: 6rem;
}

#card {
  display: flex;
  flex-direction: column;
  background-color: #ffffff;
  width: 30rem;
  height: 22rem;
  border-radius: 0.75em;
  border: 0px solid rgba(0, 0, 0, 0.2);
  padding: 30px;
  box-shadow: -2px -2px 20px rgb(0 0 0 / 15%);
  position: relative;
  margin-right: 70px;
  margin-top: 70px;
  margin-bottom: 70px;

}

.def--box {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content:space-around;
  width: 100%;
  height: 225px;

}

.definition {
  display: flex;
  flex-direction: column;
  color: black;
  font-weight: 400;
  font-style: italic;
  margin-top: -30px;
}

#def1 {
  margin-top: 20px;
  margin-bottom: 10px;
}

#def2 {
  font-size: 15px;
  font-weight: 400;
}

#sug--list {
display: flex;
flex-direction: row;
list-style: none;
word-wrap: normal;
flex-wrap: wrap;
font-style: italic;
}

#sug--list > li {
  padding: 2px;
  padding-bottom: 20px;
  color: #0a4ccf;
  cursor: pointer;
}

#transcription {
  color: black;
  font-size: 1.7rem;

}


#card::before {
  font-size: 24px;
  padding-right: 8px;
}

.listening::before {
  animation: listening 1s ease-in;
  animation-iteration-count: infinite;
}


@keyframes listening {
  from {
    border-width: 2px;
  }

  to {
    border-width: 24px;
  }
}




@media screen and (max-width: 760px) {
  main {
    flex-direction: column;
    
  }
  .mid--section {
    display: flex;
    height: max-content;
    flex-direction: column;
  }
  
  .microphone--button {
    margin-top: 20px;
    box-shadow: 0px -1px 10px rgb(0 0 0 / 15%)
  }

  #transcription {
    color: black;
    font-size: 1.2rem;

  }

  #card {
    width: 14rem;
    margin: 60px;

    
  }

}

/*
.navbar-container {
  width: 100%;
  display: flex;
  z-index: 100;
  position: fixed;
  box-shadow: 5px 5px 10px 0px #d4d4d4;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  background-color: var(--dl-color-gray-white);
}
.navbar {
  width: 100%;
  display: flex;
  max-width: var(--dl-size-size-maxcontent);
  align-items: center;
  padding-top: 24px;
  padding-left: 24px;
  padding-right: 24px;
  flex-direction: row;
  padding-bottom: 24px;
  justify-content: space-between;
}*

@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:wght@400;700&display=swap');

* {
  font-family: sans-serif;
  box-sizing: border-box;
}

body {
  background: linear-gradient(90deg, #121212, #000, #000, #121212);

  .container {
    max-width: 414px;
    margin: 0 auto;
    display: flex;
    flex-flow: row wrap;
    padding-left: 24px;
    padding-right: 24px;

    h1 {
      font-family: 'Lobster Two', cursive;
      font-size: 48px;
      text-align: center;
      width: 100%;
      color: white;
      text-shadow: 0 0 5px #333;
    }

    span {
      background: #ffffffaa;
      padding: 24px;
      max-width: 128px;
      border-radius: 4em 4em 4em .25em;
      margin-bottom: 16px;
      margin-left: 24px;
      transform: rotate(-15deg);
      opacity: 0;

      &.active {
        animation: tooltipIn 3s ease-in-out;

        &::before {
          content: 'Copied'
        }
      }

      &.init {
        animation: tooltipOut 3s ease-in-out;

        &::before {
          content: 'Copy'
        }
      }
    }

    div {
      display: flex;
      flex: 0 1 100%;

      &#transcription {
        background-color: #ffffffcc;
        width: 100%;
        min-height: 48px;
        border-radius: .25em;
        padding: 18px 16px;
        cursor: pointer;

        &::before {
          content: '📋';
          font-size: 24px;
          padding-right: 8px;
        }
      }

      label {
        width: 100%;

        select {
          background: #fefefe;
          margin-top: 8px;
          color: #121212;
          width: 100%;
          font-size: 18px;
          padding: 8px 4px;
          border: 2px solid #fefefeee;
          border-radius: .25em;
          outline: none;
        }
      }

      button {
        width: 100%;
        margin: 36px 16px 0;
        background: transparent;
        border: none;
        cursor: pointer;

        &.listening {
          &::before {
            animation: listening 1s ease-in;
            animation-iteration-count: infinite;
          }
        }

        &::before {
          content: '🎙️';
          font-size: 100px;
          color: white;
          background: rgba(255, 255, 255, .25);
          border: 24px solid rgba(255, 255, 255, .025);
          padding: 8px;
          border-radius: 50%;
        }
      }
    }
  }
}

@keyframes tooltipIn {
  from {
    opacity: 0;
    margin-left: -10px;
  }

  to {
    opacity: 1;
    margin-left: 10px;
  }
}

@keyframes tooltipOut {
  from {
    opacity: 0;
    margin-left: -10px;
  }

  to {
    opacity: 1;
    margin-left: 10px;
  }
}



*/

